Add gh-pages link to the readme

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>My Diary</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="UI/templates/style.css">
     </head>
     <body>
         <header>
@@ -47,7 +47,7 @@
                          <label></br></div>
                 <div class="here">
                          <!-- <br><a href="signup.html">sign up here</a>   -->
-                        <br><br><br><br><br><br><br><br> <a href="signup.html" class="btn">sign up </a>
+                        <br><br><br><br><br><br><br><br> <a href="UI/templates/signup.html" class="btn">sign up </a>
                                  </br>
                                  </div> 
                                             
@@ -66,9 +66,9 @@
                                     <p> <h2>There's no time like the present - start your free online diary today!</p></h2>
                                         
                                             <div class="row">
-                                                <a href="create.html" class="btn">Create Your Diary</a>
-                                                <a href="manage.html" class="btn">Manage Your Diary</a>
-                                                <a href="view.html" class="btn">View Your Diary</a>
+                                                <a href="UI/templates/create.html" class="btn">Create Your Diary</a>
+                                                <a href="UI/templates/manage.html" class="btn">Manage Your Diary</a>
+                                                <a href="UI/templates/view.html" class="btn">View Your Diary</a>
                                             </div>
                                         </div> 
                     </div>
